# meridian_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: AssociationDecision.msg  AssociationDecisionSet.msg  EmbeddedTracklet.msg  EmbeddedTrackletSet.msg  GraphUpdateEvent.msg  Instance3D.msg  Instance3DSet.msg  InstanceEmbeddingSet.msg  LocalObjectGraphSnapshot.msg  ObjectChange.msg  ObjectGeometryState.msg  ObjectMutation.msg  ObjectMutationSet.msg  ObjectNode.msg  ObjectSemanticState.msg  ObjectState.msg  PoseEstimate.msg  RGBDFrame.msg  SegmentImage.msg  SegmentRef.msg  TrackletGeometry.msg  TrackletSemantics.msg
