<?xml version="1.0"?>
<package format="3">
  <name>meridian_msgs</name>
  <version>0.1.0</version>
  <description>ROS 2 interfaces for Meridian perception, data association, and local graph dataflow.</description>

  <maintainer email="a_o@kakao.com">blu-y</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
